Fix a dangling Javadoc link and make eviction robust to out-of-order records
DecisionTimelineEntry's Javadoc linked {@link CarbonImpactResult#computedAt()} - a type that doesn't exist on main or this branch, only on the still-unmerged sibling PR #280. Changed to a non-linking {@code CarbonImpactResult}, consistent with how DecisionTimelineStore.java already handles the same not-yet-merged-sibling-type problem elsewhere in this diff.

InMemoryDecisionTimelineStore's age-based eviction only ever inspected the front of its entry list, assuming entries always arrive in non-decreasing fireTime order - a precondition the public DecisionTimelineStore SPI does not state or enforce. Entries are now inserted at their sorted position instead of always appended, so eviction stays correct regardless of arrival order. SimpleScheduler itself only ever calls record() in order, so this is belt-and-braces for a default implementation behind a pluggable SPI, not a fix for an observed problem - documented as such.