@@ -3,8 +3,9 @@ package io.carbonintensity.scheduler.runtime;
 import java.time.Clock;
 import java.time.Duration;
 import java.time.Instant;
-import java.util.ArrayDeque;
-import java.util.Deque;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
 import java.util.concurrent.ConcurrentHashMap;
@@ -50,21 +51,32 @@ public final class InMemoryDecisionTimelineStore implements DecisionTimelineStor
     }
 
     /**
-     * One job's decision entries, oldest first. Synchronized rather than a lock-free structure: recording happens at
-     * most once per second per job (driven by the scheduler's own trigger-check tick), so contention is a non-issue
-     * and a plain {@link ArrayDeque} behind a monitor is simpler to reason about than a concurrent alternative.
+     * One job's decision entries, kept sorted by {@code fireTime}. Synchronized rather than a lock-free structure:
+     * recording happens at most once per second per job (driven by the scheduler's own trigger-check tick), so
+     * contention is a non-issue and a plain {@link ArrayList} behind a monitor is simpler to reason about than a
+     * concurrent alternative.
+     * <p>
+     * {@link DecisionTimelineStore#record} carries no ordering precondition on the caller, so entries are inserted
+     * at their sorted position rather than always appended - age-based eviction only ever inspects the front of the
+     * list, and that is only correct if the front is always the true oldest entry, regardless of arrival order.
+     * {@link SimpleScheduler} itself only ever calls {@code record} in fireTime order, so this is belt-and-braces
+     * for a default implementation sitting behind a pluggable SPI, not a fix for an observed problem.
      */
     private static final class Timeline {
 
-        private final Deque<DecisionTimelineEntry> entries = new ArrayDeque<>();
+        private static final Comparator<DecisionTimelineEntry> BY_FIRE_TIME = Comparator
+                .comparing(DecisionTimelineEntry::fireTime);
+
+        private final List<DecisionTimelineEntry> entries = new ArrayList<>();
 
         synchronized void record(DecisionTimelineEntry entry, Instant cutoff, int maxEntries) {
-            entries.addLast(entry);
-            while (!entries.isEmpty() && entries.peekFirst().fireTime().isBefore(cutoff)) {
-                entries.removeFirst();
+            int insertionPoint = Collections.binarySearch(entries, entry, BY_FIRE_TIME);
+            entries.add(insertionPoint >= 0 ? insertionPoint : -insertionPoint - 1, entry);
+            while (!entries.isEmpty() && entries.get(0).fireTime().isBefore(cutoff)) {
+                entries.remove(0);
             }
             while (entries.size() > maxEntries) {
-                entries.removeFirst();
+                entries.remove(0);
             }
         }
 
